# my-pic-viewer

./: .gitignore  CHANGELOG.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
src/: App.vue  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: commands.rs  exif.rs  file_ops.rs  image_scan.rs  lib.rs  main.rs  update.rs
src/components/: ImageCanvas.vue  InfoPanel.vue  StatusBar.vue  ThumbnailStrip.vue  Toolbar.vue
src/composables/: useImageList.ts  useKeyboard.ts  useTauriApi.ts  useViewport.ts
src/utils/: path.ts
