[package]
name = "my-pic-viewer"
version = "1.0.0"
description = "绿色版图片浏览器"
authors = ["zentrix566"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "my_pic_viewer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-single-instance = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 系统回收站
trash = "5"

# EXIF 解析
kamadak-exif = "0.6"

# 图像解码 / 缩略图 / 复制到剪贴板用位图
image = { version = "0.25", default-features = false, features = [
    "jpeg",
    "png",
    "gif",
    "bmp",
    "webp",
    "tiff",
    "ico",
] }

# 自然排序，让文件名 img2 排在 img10 前面
natord = "1"

[features]
# 默认不启用任何额外特性
default = []

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
